--- a/sirs-proj-client/pom.xml
+++ b/sirs-proj-client/pom.xml
@@ -1,11 +1,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>Proj</groupId>
+		<artifactId>Sirs</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
   <groupId>Proj</groupId>
   <artifactId>sirs-proj-client</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>sirs-proj-client</name>
 
 <dependencies>
+	<dependency>
+		<groupId>Proj</groupId>
+		<artifactId>sirs-contract</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</dependency>
 	<dependency>
 		<groupId>com.google.protobuf</groupId>
 		<artifactId>protobuf-java</artifactId>
@@ -53,38 +63,38 @@
 
 		<plugins>
 			<!-- compile proto file into java files. -->
-			<plugin>
-				<groupId>com.github.os72</groupId>
-				<artifactId>protoc-jar-maven-plugin</artifactId>
-				<version>3.6.0.1</version>
-				<executions>
-					<execution>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>run</goal>
-						</goals>
-						<configuration>
-						   <includeMavenTypes>direct</includeMavenTypes>
-							
-							<inputDirectories>
-								<include>src/main/resources</include>
-							</inputDirectories>
-							
-							<outputTargets>
-								<outputTarget>
-									<type>java</type>
-									<outputDirectory>src/main/java</outputDirectory>
-								</outputTarget>
-								<outputTarget>
-									<type>grpc-java</type>
-									<pluginArtifact>io.grpc:protoc-gen-grpc-java:1.15.0</pluginArtifact>
-									<outputDirectory>src/main/java</outputDirectory>
-								</outputTarget>
-							</outputTargets>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
+<!--			<plugin>-->
+<!--				<groupId>com.github.os72</groupId>-->
+<!--				<artifactId>protoc-jar-maven-plugin</artifactId>-->
+<!--				<version>3.6.0.1</version>-->
+<!--				<executions>-->
+<!--					<execution>-->
+<!--						<phase>generate-sources</phase>-->
+<!--						<goals>-->
+<!--							<goal>run</goal>-->
+<!--						</goals>-->
+<!--						<configuration>-->
+<!--						   <includeMavenTypes>direct</includeMavenTypes>-->
+<!--							-->
+<!--							<inputDirectories>-->
+<!--								<include>src/main/resources</include>-->
+<!--							</inputDirectories>-->
+<!--							-->
+<!--							<outputTargets>-->
+<!--								<outputTarget>-->
+<!--									<type>java</type>-->
+<!--									<outputDirectory>src/main/java</outputDirectory>-->
+<!--								</outputTarget>-->
+<!--								<outputTarget>-->
+<!--									<type>grpc-java</type>-->
+<!--									<pluginArtifact>io.grpc:protoc-gen-grpc-java:1.15.0</pluginArtifact>-->
+<!--									<outputDirectory>src/main/java</outputDirectory>-->
+<!--								</outputTarget>-->
+<!--							</outputTargets>-->
+<!--						</configuration>-->
+<!--					</execution>-->
+<!--				</executions>-->
+<!--			</plugin>-->
 
 
 			<plugin>
