Server sends timestep data to clients

--- a/sirs-proj/pom.xml
+++ b/sirs-proj/pom.xml
@@ -39,21 +39,38 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
-		<plugin>
-			<groupId>org.codehaus.mojo</groupId>
-
-			<artifactId>exec-maven-plugin</artifactId>
-
-			<version>3.0.0</version>
-
-
-		<configuration>
-
-			<mainClass>Proj.Main.App</mainClass>
-
-		</configuration>
-
-</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>3.0.0</version>
+				<configuration>
+					<mainClass>proj_server.main.App</mainClass>
+				</configuration>
+			</plugin>
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-assembly-plugin</artifactId>
+			    <executions>
+			        <execution>
+			            <phase>package</phase>
+			            <goals>
+			                <goal>single</goal>
+			            </goals>
+			            <configuration>
+			                <archive>
+			                <manifest>
+			                    <mainClass>
+			                        proj_client.main.App
+			                    </mainClass>
+			                </manifest>
+			                </archive>
+			                <descriptorRefs>
+			                    <descriptorRef>jar-with-dependencies</descriptorRef>
+			                </descriptorRefs>
+			            </configuration>
+			        </execution>
+			    </executions>
+			</plugin>
 		</plugins>
 	</build>
   
