--- a/sirs-contract/pom.xml
+++ b/sirs-contract/pom.xml
@@ -31,19 +31,24 @@
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-netty-shaded</artifactId>
-            <version>1.15.1</version>
+            <version>1.34.0</version>
         </dependency>
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-protobuf</artifactId>
-            <version>1.15.1</version>
+            <version>1.34.0</version>
         </dependency>
-        <dependency>
+		<dependency>
+		    <groupId>com.google.guava</groupId>
+		    <artifactId>guava</artifactId>
+		    <version>31.0.1-jre</version>
+		</dependency>
+		<dependency>
             <groupId>io.grpc</groupId>
-            <artifactId>grpc-stub</artifactId>
-            <version>1.15.1</version>
+            <artifactId>grpc-api</artifactId>
+            <version>1.34.0</version>
         </dependency>
-    </dependencies>
+</dependencies>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
