--- a/sirs-proj/.classpath
+++ b/sirs-proj/.classpath
@@ -8,13 +8,14 @@
 	</classpathentry>
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
 		<attributes>
+			<attribute name="test" value="true"/>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="test" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
@@ -29,5 +30,14 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="/sirs-contract"/>
+	<classpathentry kind="lib" path="C:/Users/Filipe/.m2/repository/io/grpc/grpc-api/1.34.0/grpc-api-1.34.0.jar" sourcepath="C:/Users/Filipe/.m2/repository/io/grpc/grpc-api/1.34.0/grpc-api-1.34.0-sources.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="maven.groupId" value="io.grpc"/>
+			<attribute name="maven.artifactId" value="grpc-api"/>
+			<attribute name="maven.version" value="1.34.0"/>
+			<attribute name="maven.scope" value="compile"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
